<resources>
    <string name="app_name">Rental reports</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_image">login image</string>
    <string name="rut">Rut</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="hint_pass">Ingrese su contraseña</string>
    <string name="hint_rut">Rut sin puntos y con guión</string>
    <string name="back_button">back_ button</string>
    <string name="ingreso_de_reports">Ingreso de reports</string>
    <string name="report_icon">report_icon</string>
    <string name="envio_de_reports">Envío de reports</string>
    <string name="fecha">Fecha</string>
    <string name="numero_report">N° report</string>
    <string name="equipo_o_maquina">Equipo</string>
    <string name="tipo_de_equipo">Tipo de equipo</string>
    <string name="patente">Patente</string>
    <string name="obra">Obra</string>
    <string name="empresa_mandante">Empresa mandante</string>
    <string name="horometro_inicial">Horómetro inicial</string>
    <string name="horometro_final">Horómetro final</string>
    <string name="diferencia_horometro">Diferencia horómetro</string>
    <string name="kilometraje_inicial">Kilometraje inicial</string>
    <string name="kilometraje_final">Kilometraje final</string>
    <string name="operador">Operador:</string>
    <string name="información_del_vehiculo">Información del vehículo:</string>
    <string name="informacion_de_obra_y_empresa">Información de obra y empresa:</string>
    <string name="horometro_y_kilometraje">Horómetro y kilometraje:</string>
    <string name="siguiente">Siguiente</string>
    <string name="informacion_de_viajes">Información de viajes:</string>
    <string name="viajes_aridos">Viajes a áridos</string>
    <string name="metros_cubicos_por_viaje">Metros cúbicos por viaje</string>
    <string name="metros_cubicos_totales">Metros cúbicos totales</string>
    <string name="informacion_de_combustible">Información de combustible:</string>
    <string name="jornada_y_observaciones">Jornada y observaciones:</string>
    <string name="jornada_de_trabajo">Jornada de trabajo</string>
    <string name="observaciones">Observaciones</string>
    <string name="firma_supervisor_de_faena">Firma supervisor de faena:</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="firma_chofer_u_operador">Firma chofer u operador:</string>
    <string name="cantidad_de_litros_de_combustible">Cantidad de litros de combustible</string>
    <string name="horometro_carga_comustible">Horómetro carga comustible</string>
    <string name="no_se_han_creado_reportes">No se han creado reportes.</string>
    <string name="inicio_de_jornada">Inicio de jornada</string>
    <string name="fin_de_jornada">Fin de jornada</string>
    <string name="editar">Editar</string>
    <string name="enviar">Enviar</string>
    <string name="firma_de_supervisor_de_faena">Firma de supervisor de faena:</string>
    <string name="horometro_carga_de_combustible">Horómetro carga de combustible:</string>
    <string name="cantidad_lts_combustible">Cantidad lts. combustible:</string>
    <string name="metros_cubicos_totales_send">Metros cúbicos totales:</string>
    <string name="metros_cubicos_por_viaje_send">Metros cúbicos por viaje:</string>
    <string name="viajes_a_aridos">Viajes a áridos:</string>
    <string name="kilometraje_final_send">Kilometraje final:</string>
    <string name="kilometraje_inicial_send">Kilometraje inicial:</string>
    <string name="dif_hor">Dif. hor:</string>
    <string name="hor_final">Hor. final:</string>
    <string name="hor_inicial">Hor. inicial:</string>
    <string name="empresa">Empresa:</string>
    <string name="obra_send">Obra:</string>
    <string name="patente_send">Patente:</string>
    <string name="tipo_de_equipo_send">Tipo de Equipo:</string>
    <string name="equipo">Equipo:</string>
    <string name="reporte_n">Reporte N°:</string>
    <string name="especificar_obra">Especificar obra</string>
    <string name="especificar_empresa">Especificar empresa</string>
    <string name="aditamento_o_accesorio">Aditamento o accesorio</string>
    <string name="traslado_de_materiales">Traslado de materiales:</string>
    <string name="agregar_viaje">Agregar viaje</string>
    <string name="ingresar_datos_del_viaje">Ingresar datos del viaje</string>
    <string name="tipo_de_material">Tipo de material</string>
    <string name="cantidad_de_viajes">Cantidad de viajes</string>
    <string name="datos_del_reporte">Datos del reporte:</string>
    <string name="viajes_a_ridos">Viajes a áridos:</string>
    <string name="sin_viajes_aridos">Sin viajes a áridos</string>
    <string name="equipo_arrrastre">Equipo Arrrastre:</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="editar_viajes_a_aridos">Editar viajes a áridos</string>
    <string name="check_list">Check list</string>
    <string name="seleccionar_estado_del_item">Seleccionar estado del ítem</string>
    <string name="bueno">Bueno</string>
    <string name="regular">Regular</string>
    <string name="malo">Malo</string>
    <string name="no_aplica">No aplica</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="salir">salir</string>
    <string name="rut_main">Rut:</string>
    <string name="usuario">Usuario:</string>

</resources>