<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/viajes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/informacion_de_viajes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- viajes input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/viajes_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/viajes_aridos"
            app:boxStrokeColor="@color/stroke_green"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viajes_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/viajes_aridos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- metros cúbicos input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/metros_cubicos_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/metros_cubicos_por_viaje"
            app:boxStrokeColor="@color/stroke_green"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viajes_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/metros_cubicos_viaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- metros totales input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/metros_totales_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/metros_cubicos_totales"
            app:boxStrokeColor="@color/stroke_green"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/metros_cubicos_input">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/metros_cubicos_totales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
